--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -13,26 +13,32 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Admin.ID_Usuario_Pk" />
                 <div class="form-group">                    
+                    <label>Nombre: </label>
                     <input asp-for="Admin.Nombre" class="form-control" placeholder="Nombre"/>
                     <span asp-validation-for="Admin.Nombre" class="text-danger"></span>
                 </div>
-                <div class="form-group">                   
+                <div class="form-group">      
+                    <label>Apellido: </label>
                     <input asp-for="Admin.Apellido" class="form-control" placeholder="Apellido"/>
                     <span asp-validation-for="Admin.Apellido" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group">       
+                    <label>DNI: </label>
                     <input asp-for="Admin.DNI" class="form-control" placeholder="DNI" />
                     <span asp-validation-for="Admin.DNI" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group">        
+                    <label>Número de Control: </label>
                     <input asp-for="Admin.Numero_Control" class="form-control" placeholder="Número de Control"/>
                     <span asp-validation-for="Admin.Numero_Control" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group"> 
+                    <label>Correo Institucional: </label>
                     <input asp-for="Admin.Correo" class="form-control" placeholder="Correo Electrónico"/>
                     <span asp-validation-for="Admin.Correo" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group">   
+                    <label>División: </label>
                     <select asp-for="Admin.ID_Division_Fk"
                             asp-items="Model.Divisions.Select(d => new SelectListItem
                                     {
@@ -45,13 +51,15 @@
                     </select>
                     <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group">     
+                    <label>Servicio: </label>
                     <select asp-for="Admin.ID_Servicio_Fk" id="servicioSelect" class="form-control" required>
                         <option hidden value="">Seleccione el Servicio Correspondiente</option>
                     </select>
                     <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
                 </div>
-                <div class="form-group">                    
+                <div class="form-group">           
+                    <label>Roles: </label>
                     <select asp-for="Admin.ID_Rol_Fk"
                             asp-items="Model.Roles"
                             class="form-control">
@@ -64,8 +72,7 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="centered-button">
+        <div class="centered-button">
         @{
             int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;
         }
@@ -86,6 +93,7 @@
         {
             <a class="btn-action" asp-page="./IndexAdminU">Volver al Listado</a>
         }
+    </div>
     </div>
  </div>
 
