--- a/PPTT/Pages/Administradores/Details.cshtml
+++ b/PPTT/Pages/Administradores/Details.cshtml
@@ -72,7 +72,7 @@
                                 }
                                 else if (Model.Admin.ID_Division_Fk == 1)
                                 {
-                                    @:División Comunicaciones e Informática
+                                    @:División Comunicacion e Informática
                                 }
                                 else if (Model.Admin.ID_Division_Fk == 2)
                                 {
