--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -2,7 +2,9 @@
 @model PPTT.Pages.Administradores.CreateModel
 
 @{
-    ViewData["Title"] = "Crear Usuario";
+    ViewData["Title"] = "Crear Usuario";    
+    int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;      
+    int _division = HttpContext.Session.GetInt32("Division") ?? 0;
 }
 <div class="page-content">
     <div class="form-alta">
@@ -41,50 +43,67 @@
                         <input required asp-for="Admin.Correo" class="form-control" placeholder="Correo Institucional: 'correo@faa.mil.ar' " />
                     <span asp-validation-for="Admin.Correo" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    
-                    <select asp-for="Admin.ID_Division_Fk"
+                    @if (_rol == 3)
+                    {
+                        <div class="form-group">                    
+                            <select asp-for="Admin.ID_Division_Fk"
                             asp-items="Model.Divisions.Select(d => new SelectListItem
-                                {
-                                    Value = d.ID_Division_Pk.ToString(),
-                                    Text = d.Descripcion_Division
-                                })"
+                                        {
+                                            Value = d.ID_Division_Pk.ToString(),
+                                            Text = d.Descripcion_Division
+                                        })"
                             id="deptSelect"
                             class="form-control">
-                        <option hidden selected value="">Seleccione la división</option>
-                    </select>
-                    <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
-                </div>
-                <div class="form-group">
+                                <option hidden selected value="">Seleccione la división</option>
+                            </select>
+                            <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <select asp-for="Admin.ID_Division_Fk"
+                                    asp-items="@(Model.Divisions.Select(d => new SelectListItem
+                                    {
+                                        Value = d.ID_Division_Pk.ToString(),
+                                        Text = d.Descripcion_Division
+                                    }))"
+                                    id="deptSelect"
+                                    class="form-control">
+                                <option hidden selected value="">Seleccione la División</option>
+                            </select>
+                            <span asp-validation-for="Admin.ID_Division_Fk" class="text-danger"></span>
+                        </div>
+
+                    }
+                    <div class="form-group">
                     <select asp-for="Admin.ID_Servicio_Fk" id="servicioSelect" class="form-control">
                         <option hidden selected value="">Seleccione el servicio correspondiente</option>
                     </select>
                     <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
                 </div>
-<div class="form-group">
-    <select asp-for="Admin.Division2"
-            asp-items="Model.Divisions.Select(d => new SelectListItem
-            {
-                Value = d.ID_Division_Pk.ToString(),
-                Text = d.Descripcion_Division
-            })"
-            id="deptSelect2"
-            class="form-control">
-        <option hidden selected value="">Seleccione la 2da división (opcional)</option>
-    </select>
-</div>
-
-
+                @if (_rol == 3)
+                {
+                    <div class="form-group">
+                    <select asp-for="Admin.Division2"
+                            asp-items="Model.Divisions.Select(d => new SelectListItem
+                            {
+                                Value = d.ID_Division_Pk.ToString(),
+                                Text = d.Descripcion_Division
+                            })"
+                            id="deptSelect2"
+                            class="form-control">
+                        <option hidden selected value="">Seleccione la 2da división (opcional)</option>
+                    </select>                                            
+                    </div>
+                }
                 <div class="form-group">
                     <input type="submit" value="Generar Alta" class="submit-log" />
                 </div>
                     </fieldset>
             </form>
         </div>
-        <div class="centered-button">
-            @{
-                int _rol = HttpContext.Session.GetInt32("UserRole") ?? 0;
-            }
+        <div class="centered-button">            
             @if (_rol == 3)
             {
                 <a style="text-decoration: none" asp-page="./Index">Volver al listado</a>
