--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -60,9 +60,9 @@
         <dd class="col-sm-8">
             @Html.DisplayFor(model => model.PedidoTrabajo.Organismo.Descripcion_organismo)
         </dd>
-        <dt class="col-sm-4">
+        @* @* <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Dependencia_Interna_Fk)
-        </dt>
+        </dt> *@ 
         <dd class="col-sm-8">
             @Html.DisplayFor(model => model.PedidoTrabajo.Dependencia_Interna.Descripcion_Dependencia)
         </dd>
